--- a/.github/workflows/generate-new-sdk.yml
+++ b/.github/workflows/generate-new-sdk.yml
@@ -19,7 +19,7 @@ jobs:
         run: |-
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
-          git add exoscale/openapi.json
+          git add sdk/api/openapi.yaml
           timestamp=$(date -u)
           git commit -m "OpenAPI spec update: ${timestamp}" || exit 0
-          git push
+          git push origin actions-test  # Change to main branch after testing
