--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.exoscale</groupId>
-    <artifactId>untitled1</artifactId>
+    <artifactId>sdk</artifactId>
     <version>1.0-SNAPSHOT</version>
- 
+
     <build>
         <plugins>
             <plugin>
@@ -16,6 +16,9 @@
                 <version>7.4.0</version>
                 <executions>
                     <execution>
+                        <!-- Added id and phase to bind OpenAPI generation to generate-sources phase -->
+                        <id>generate-sources</id> <!-- Added line -->
+                        <phase>generate-sources</phase> <!-- Added line -->
                         <goals>
                             <goal>generate</goal>
                         </goals>
@@ -52,7 +55,7 @@
                                 <buildTool>maven</buildTool>
                             </additionalProperties>
                             <output>${project.basedir}/sdk</output>
-                            <templateDirectory>${project.basedir}/generator</templateDirectory>
+                            <templateDirectory>${project.basedir}/deployment/generator</templateDirectory>
                         </configuration>
                     </execution>
                 </executions>
@@ -73,7 +76,7 @@
                             <outputDirectory>${project.basedir}/sdk/src/main/java/com/exoscale/exoscale4j/client</outputDirectory>
                             <resources>
                                 <resource>
-                                    <directory>${project.basedir}/generator/libraries/native</directory>
+                                    <directory>${project.basedir}/deployment/generator/libraries/native</directory>
                                     <includes>
                                         <include>Credentials.java</include>
                                         <include>Client.java</include>
@@ -83,9 +86,29 @@
                             </resources>
                         </configuration>
                     </execution>
+
+                    <execution>
+                        <!-- Added new execution block for copying README.md -->
+                        <id>copy-readme</id> <!-- Added line -->
+                        <phase>process-resources</phase> <!-- Added line -->
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.basedir}</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${project.basedir}/sdk</directory>
+                                    <includes>
+                                        <include>README.md</include>
+                                    </includes>
+                                    <filtering>false</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution> <!-- Added block ends here -->
                 </executions>
             </plugin>
-
         </plugins>
     </build>
     <properties>
