--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,6 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Generate sources in root
-      run: mvn -B generate-sources --no-transfer-progress --file pom.xml
+      run: mvn -B clean generate-sources process-resources --no-transfer-progress --file pom.xml
     - name: Build SDK with Maven
       run: cd sdk && mvn -B install --no-transfer-progress --file pom.xml -Dmaven.test.skip=true -X
