--- a/.github/workflows/openapi-update-and-generate-new-sdk.yml
+++ b/.github/workflows/openapi-update-and-generate-new-sdk.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - add-new-api-folder-for-the-current-version
+  workflow_dispatch:
+  schedule:
+    - cron: '0 7 * * *'  # At 07:00 every day
 
 jobs:
   scheduled:
