--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up GitHub CLI
-        uses: cli/gh-action@v2
-        with:
-          version: latest
+        uses: actions/setup-gh@v1
 
       - name: Create GitHub Release
         env:
