--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up GitHub CLI
-        uses: actions/setup-gh@v1
+        uses: actions4gh/setup-gh@v1
 
       - name: Create GitHub Release
         env:
