testing another action.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up GitHub CLI
-        uses: actions4gh/setup-gh@v1
+        uses: sersoft-gmbh/setup-gh-cli-action@v2
+        with:
+          version: stable
 
       - name: Create GitHub Release
         env:
