--- a/.github/workflows/openapi-update-generate-new-sdk.yml
+++ b/.github/workflows/openapi-update-generate-new-sdk.yml
@@ -3,7 +3,7 @@ name: Update bundled openapi definition & Generate SDK
 on:
   push:
     branches:
-      - add-new-api-folder-for-the-current-version
+      - main
   workflow_dispatch:
   schedule:
     - cron: '0 7 * * *'  # At 07:00 every day
