--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
                 <additionalProperties>
                   <buildTool>maven</buildTool>
                 </additionalProperties>
-                <apiPackage>com.exoscale.exoscale4j.api</apiPackage>
-                <modelPackage>com.exoscale.exoscale4j.model</modelPackage>
-                <invokerPackage>com.exoscale.exoscale4j.client</invokerPackage>
-                <groupId>com.exoscale.exoscale4j</groupId>
-                <artifactId>exoscale4j</artifactId>
+                <apiPackage>com.exoscale.sdk.api</apiPackage>
+                <modelPackage>com.exoscale.sdk.model</modelPackage>
+                <invokerPackage>com.exoscale.sdk.client</invokerPackage>
+                <groupId>com.exoscale.sdk</groupId>
+                <artifactId>sdk</artifactId>
                 <artifactVersion>0.0.2-ALPHA</artifactVersion>
                 <artifactUrl>https://github.com/exoscale/exoscale4j</artifactUrl>
                 <artifactDescription>Java SDK for interacting with Exoscale Cloud Services.</artifactDescription>
@@ -67,7 +67,7 @@
               <goal>copy-resources</goal>
             </goals>
             <configuration>
-              <outputDirectory>${project.basedir}/sdk/src/main/java/com/exoscale/exoscale4j/client</outputDirectory>
+              <outputDirectory>${project.basedir}/sdk/src/main/java/com/exoscale/sdk/client</outputDirectory>
               <resources>
                 <resource>
                   <directory>${project.basedir}/generator/libraries/native</directory>
