--- a/.github/workflows/openapi-update-generate-new-sdk.yml
+++ b/.github/workflows/openapi-update-generate-new-sdk.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - salehelkaza/sc-104823/exoscale-sdk-for-java-last-mile
   workflow_dispatch:
-  schedule:
+ # schedule:
    # - cron: '0 7 * * *'  # At 07:00 every day
 
 jobs:
