--- a/.github/workflows/openapi-update-generate-new-sdk.yml
+++ b/.github/workflows/openapi-update-generate-new-sdk.yml
@@ -7,6 +7,7 @@ on:
   workflow_dispatch:
  # schedule:
    # - cron: '0 7 * * *'  # At 07:00 every day
+
 jobs:
   scheduled:
     runs-on: ubuntu-latest
@@ -60,7 +61,7 @@ jobs:
         run: |
           echo "Checking target folder for JavaDocs"
           ls -lR sdk/target/
-      
+
       - name: Commit and push changes if OpenAPI definition has changed
         if: env.CHANGED == 'true'
         run: |-
@@ -77,11 +78,20 @@ jobs:
         with:
           ref: gh-pages-test  # Test on a temporary gh-pages branch
 
-      - name: Copy JavaDocs to gh-pages
+      - name: Find and extract Javadoc JAR dynamically
         if: env.CHANGED == 'true'
         run: |
           mkdir -p javadoc/current
-          cp -r sdk/target/site/apidocs/* javadoc/current/
+          # Dynamically find the Javadoc JAR file
+          JAR_FILE=$(find sdk/target -name '*-javadoc.jar' | head -n 1)
+          if [ -z "$JAR_FILE" ]; then
+            echo "No Javadoc JAR file found!"
+            exit 1
+          fi
+          echo "Found Javadoc JAR: $JAR_FILE"
+          cp "$JAR_FILE" javadoc/current/
+          cd javadoc/current
+          jar -xvf $(basename "$JAR_FILE")
 
       - name: Append new version to index.html
         if: env.CHANGED == 'true'
