--- a/.github/workflows/openapi-update-generate-new-sdk.yml
+++ b/.github/workflows/openapi-update-generate-new-sdk.yml
@@ -3,7 +3,7 @@ name: Update bundled openapi definition & Generate SDK
 on:
   push:
     branches:
-      - sdk-versioning
+      - elkezza-sdk-versioning # for testing, to be changed to "main" before merging 
   workflow_dispatch:
   schedule:
    - cron: '0 7 * * *'  # At 07:00 every day
@@ -105,7 +105,7 @@ jobs:
         if: env.CHANGED == 'true'
         uses: actions/checkout@v4
         with:
-          ref: gh-pages
+          ref: gh-pages-test  # for testing, to be changed to "gh-pages" before merging 
       - name: Move Javadoc JAR back to working directory
         if: env.CHANGED == 'true'
         run: |
