--- a/.github/workflows/openapi-update-generate-new-sdk.yml
+++ b/.github/workflows/openapi-update-generate-new-sdk.yml
@@ -43,7 +43,7 @@ jobs:
             new_version="${base_version}-SNAPSHOT-${unique_id}"
           else
             echo "Current version is the last release."
-            IFS='.-' read -r -a parts <<< "$current_version"'
+            IFS='.-' read -r -a parts <<< "$current_version"
             major=${parts[0]}
             minor=${parts[1]}
             patch=${parts[2]}
