--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
           git add pom.xml README.md "$CONFIG_FILE"
-          git commit -m "Update version to $BASE_VERSION for release"
+          git commit -m "Update version to $BASE_VERSION for release" || true
           git push
 
 
