--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,7 +106,7 @@ jobs:
       - name: Checkout gh-pages branch
         uses: actions/checkout@v4
         with:
-          ref: gh-pages-test       # Change to gh-pages before the merge
+          ref: gh-pages
           
       - name: Move Javadoc JAR back to working directory
         run: |
