--- a/.github/workflows/openapi-update-generate-new-sdk.yml
+++ b/.github/workflows/openapi-update-generate-new-sdk.yml
@@ -3,7 +3,7 @@ name: Update bundled openapi definition & Generate SDK
 on:
   push:
     branches:
-      - main 
+      - elkezza-sdk-versioning   # change to 'main' before merge
   workflow_dispatch:
   schedule:
    - cron: '0 7 * * *'  # At 07:00 every day
@@ -105,7 +105,7 @@ jobs:
         if: env.CHANGED == 'true'
         uses: actions/checkout@v4
         with:
-          ref: gh-pages
+          ref: gh-pages-test  # change to 'gh-pages' before merge
       - name: Move Javadoc JAR back to working directory
         if: env.CHANGED == 'true'
         run: |
