--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -144,8 +144,8 @@ jobs:
 
       - name: Commit and push JavaDocs
         run: |-
-          git config user.name "Automated"
-          git config user.email "actions@users.noreply.github.com"
+          git config user.name "Exoscale"
+          git config user.email "operation+build@exoscale.net"
           git add .
           git commit -m "Update JavaDocs for $BASE_VERSION"
           git push
